# maint-schedule

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  Maint Schedules.xlsx  README.md  brz-rules.yaml  brz-rules.yml  ci.sh  docker-compose.yml  history.py  maint.py  mise.toml  pyproject.toml  requirements-dev.txt  requirements.txt  schedule.py  schema.yaml  schema.yml  setup.cfg  setup.sh  test.py  test_schedule.py  validate_yaml.py  wrx-rules.yaml  wrx-rules.yml
.github/workflows/: docker-publish.yml
Maint Schedules/: BRZ Severe-Table 1.csv  WRX Severe-Table 1.csv  WRX-Table 1.csv
docs/superpowers/plans/: 2026-03-15-mileage-chart.md
docs/superpowers/specs/: 2026-03-14-mileage-chart-design.md
models/: __init__.py  calculations.py  car.py  history_entry.py  loader.py  rule.py  service_due.py  status.py  vehicle.py
source/: BRZ logged.csv  WRX logged.csv
source/Maint Schedules/: BRZ-Table 1.csv
tests/: __init__.py  test_calculations.py  test_car.py  test_history_entry.py  test_loader.py  test_maint.py  test_rule.py  test_service_due.py  test_status.py  test_validate_yaml.py  test_vehicle.py
tests/e2e/: conftest.py  test_history.py  test_navigation.py  test_rules.py  test_status.py  test_vehicles.py
tests/e2e/fixtures/: test_vehicle.yaml
vehicles/: brz-rules.yaml  brz.yaml  cbr600rr.yaml  gx550.yaml  models.yaml  wrx-rules.yaml  wrx.yaml
web/: app.py
web/templates/: base.html  chart.html  edit_vehicle.html  history.html  index.html  rules.html  vehicle.html  vehicle_base.html
web/templates/partials/: add_rule_form.html  (+20 more)
